--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -638,7 +638,6 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  flex-direction
 }
 
 :not(.MarkpromptTicketDeflectionForm) .MarkpromptChatView .MarkpromptPromptWrapper {
@@ -651,6 +650,7 @@
   /* make sure the shadow shown when :focus-within is true isn't clipped */
   margin: var(--markprompt-input-focus-shadow-width);
   padding-top: 0.5rem;
+  padding-left: 0.25rem;
 }
 
 .MarkpromptTicketDeflectionForm .MarkpromptChatView .MarkpromptPromptWrapper {
@@ -879,7 +879,15 @@
   font-size: 1rem;
   color: var(--markprompt-foreground);
   background-color: transparent;
-  padding: 0.5rem;
+  padding-block: 0.5rem;
+}
+
+:not(.MarkpromptTicketDeflectionForm) .MarkpromptPrompt {
+  padding-inline: 0.5rem;
+}
+
+.MarkpromptTicketDeflectionForm .MarkpromptPrompt {
+  padding-inline: 0.25rem;
 }
 
 .MarkpromptPrompt:focus {
@@ -2658,12 +2666,9 @@
   background-color: var(--markprompt-muted);
 }
 
-.MarkpromptPromptWrapper button {
-  align-self: flex-end;
-}
-
 :not(.MarkpromptTicketDeflectionForm) .MarkpromptPromptWrapper .MarkpromptButton,
 :not(.MarkpromptTicketDeflectionForm) .MarkpromptPromptWrapper .MarkpromptConversationSelect {
+  align-self: flex-end;
   margin-bottom: 0.5rem;
 }
 
