--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -457,6 +457,10 @@
   display: none;
 }
 
+.MarkpromptTicketDeflectionForm[data-expanded="true"] .MarkpromptMessages {
+  flex-grow: 1;
+}
+
 .MarkpromptTextAreaContainer {
   height: 100%;
   flex: 1;
@@ -625,13 +629,16 @@
   padding-inline: 0.5rem;
   overflow: hidden;
   overflow-y: hidden;
-
-
 }
 
 .MarkpromptTicketDeflectionForm[data-expanded="false"] .MarkpromptChatView .MarkpromptForm {
   border-top: 0;
   box-shadow: none;
+}
+
+.MarkpromptTicketDeflectionForm[data-expanded="true"] .MarkpromptChatView .MarkpromptForm {
+  max-height: 120px;
+  flex: none;
 }
 
 .MarkpromptPromptWrapper {
@@ -2562,14 +2569,6 @@
   overflow: hidden;
 }
 
-.MarkpromptTicketDeflectionForm {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
 .MarkpromptTicketDeflectionForm .MarkpromptNavigationMenu {
   flex: none;
 }
@@ -2581,15 +2580,24 @@
 }
 
 .MarkpromptTicketDeflectionForm {
+  width: 100%;
   height: 400px;
   max-height: 80vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
 }
 
 .MarkpromptTicketDeflectionForm[data-expanded="true"] {
-  animation-name: markprompt-grow-dialog;
-  animation-duration: 200ms;
-  animation-fill-mode: forwards;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
+  transition: none;
+  animation-name: markprompt-grow-dialog;
+}
+
+.MarkpromptTicketDeflectionForm[data-expanded="false"][data-animate-shrink="true"] {
+  animation-name: markprompt-shrink-dialog;
 }
 
 /* MarkpromptDialogFooter */
@@ -2599,7 +2607,8 @@
   flex-direction: row;
   flex: none;
   align-items: center;
-  padding: 0.675rem 1rem;
+  padding-inline: 1rem;
+  height: 3.5rem;
   border-top: 1px solid var(--markprompt-border);
   background-color: var(--markprompt-background-accent);
   overflow: hidden;
@@ -2680,6 +2689,36 @@
 
 .MarkpromptTicketDeflectionForm .MarkpromptPromptWrapper .MarkpromptButton {
   margin-bottom: 0.5rem;
+}
+
+.MarkpromptDialogFooter .MarkpromptIconLink {
+  margin-left: -0.5rem;
+}
+
+.MarkpromptIconLink {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  border-radius: var(--markprompt-button-radius);
+  align-items: center;
+  color: var(--markprompt-mutedForeground);
+  font-weight: 500;
+  font-size: var(--markprompt-text-size);
+  cursor: pointer;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: all;
+  transition-duration: 300ms;
+}
+
+.MarkpromptIconLink:hover {
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-foreground);
+}
+
+.MarkpromptButtonIcon {
+  width: 0.875rem;
+  height: 0.875rem;
+  stroke-width: 2.5px;
 }
 
 /* Animations */
@@ -2878,5 +2917,14 @@
   }
   100% {
     height: 80vh;
+  }
+}
+
+@keyframes markprompt-shrink-dialog {
+  0% {
+    height: 80vh;
+  }
+  100% {
+    height: 400px;
   }
 }
