--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2319,7 +2319,8 @@
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr;
-  max-height: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .MarkpromptTicketViewButtonRow {
@@ -2327,6 +2328,8 @@
   flex-direction: row;
   gap: 1rem;
   align-items: center;
+  justify-content: end;
+  width: 100%;
 }
 
 .MarkpromptTicketViewButtonRow p {
@@ -2336,8 +2339,10 @@
 }
 
 .MarkpromptCreateTicket {
-  padding-inline: 3rem;
-  padding-block: 1.5rem;
+  display: flex;
+  padding-inline: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0;
   overflow: scroll;
   scrollbar-width: none;
   height: 100%;
@@ -2352,6 +2357,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1rem;
+  flex-grow: 1;
 }
 
 .MarkpromptCreateTicketForm label {
@@ -2365,7 +2371,7 @@
   flex-direction: column;
   align-items: flex-start;
   min-width: 100%;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .MarkpromptFormGroup input,
@@ -2373,15 +2379,21 @@
   font-size: var(--markprompt-text-size);
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
-  border-radius: calc(var(--markprompt-radius) * 0.5);
+  border-radius: var(--markprompt-button-radius);
   transition-property: all;
   transition-duration: 150ms;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem;
   outline: none;
+}
+
+.MarkpromptFormGroup input {
+  width: 100%;
+  max-width: 400px;
 }
 
 .MarkpromptFormGroup textarea {
   min-width: 100%;
+  height: 100%;
   min-height: 10rem;
   font-family: inherit;
 
@@ -2394,6 +2406,10 @@
 .MarkpromptFormGroup textarea:focus-within {
   box-shadow: 0 0 0 3px var(--markprompt-border);
   border-color: var(--markprompt-border-accent);
+}
+
+.MarkpromptFormGroupGrow {
+  flex-grow: 1;
 }
 
 .MarkpromptDropdownMenuContent {
@@ -2607,18 +2623,23 @@
   flex-direction: row;
   flex: none;
   align-items: center;
+  padding-block: 0.5rem;
   padding-inline: 1rem;
-  height: 3.5rem;
+  /* height: 3.5rem; */
   border-top: 1px solid var(--markprompt-border);
   background-color: var(--markprompt-background-accent);
   overflow: hidden;
   width: 100%;
   font-size: var(--markprompt-text-size-xs);
   color: var(--markprompt-mutedForeground);
+  gap: 0.5rem;
 }
 
 .MarkpromptDialogFooter :first-child {
   flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .MarkpromptDialogFooter :last-child {
@@ -2688,17 +2709,17 @@
 }
 
 .MarkpromptTicketDeflectionForm .MarkpromptPromptWrapper .MarkpromptButton {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .MarkpromptDialogFooter .MarkpromptIconLink {
-  margin-left: -0.5rem;
+  /* margin-left: -0.5rem; */
 }
 
 .MarkpromptIconLink {
   display: flex;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.375rem 0.5rem;
   border-radius: var(--markprompt-button-radius);
   align-items: center;
   color: var(--markprompt-mutedForeground);
