--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -27,16 +27,18 @@ body,
 }
 
 main {
+  position: relative;
   display: grid;
   place-items: center;
-  height: 100%;
-  min-height: 100vh;
-  min-height: 100dvh;
+  width: 100%;
+  height: 100vh;
 }
 
 #message {
+  position: absolute;
   display: grid;
   place-items: center;
+  inset: 0;
 }
 
 #message p {
@@ -53,7 +55,7 @@ main {
    the `display: "plain"` case.
 */
 #markprompt {
-  /* position: absolute;
+  position: absolute;
   inset: 0;
-  pointer-events: auto; */
+  pointer-events: auto;
 }
