--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2424,16 +2424,17 @@
   border-radius: var(--markprompt-button-radius);
   transition-property: all;
   transition-duration: 150ms;
-  padding: 0.5rem;
   outline: none;
 }
 
 .MarkpromptFormGroup input {
+  padding: 0.5rem 0.75rem;
   width: 100%;
   max-width: 400px;
 }
 
 .MarkpromptFormGroup textarea {
+  padding: 0.75rem;
   min-width: 100%;
   height: 100%;
   min-height: 10rem;
