--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -31,7 +31,8 @@
   --markprompt-ring-shadow: 0 0 #0000;
   --markprompt-ring-offset-shadow: 0 0 #0000;
   --markprompt-error-background: #fef2f2;
-  --markprompt-background-purple: #6C47FF;
+  --markprompt-background-purple: #6c47ff;
+  --markprompt-star-active: #fbbf24;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -1484,7 +1485,7 @@
   display: inline-block;
 } */
 
-.MarkpromptPromptFeedback {
+.MarkpromptPromptFeedback:not([data-show-feedback-always="true"]) {
   transition-timing-function: cubic-bezier(.4,.36,0,1);
   transition-property: all;
   transition-duration: 300ms;
@@ -1673,7 +1674,7 @@
 .MarkpromptChatView .MarkpromptReferences {
   background-color: unset;
   border-top: none;
-  padding-block-end: 3.75rem;
+  padding-block-end: 1rem;
 }
 
 
@@ -2334,7 +2335,7 @@
   padding-inline: 4rem;
 }
 
-.MarkpromptMessageCreateTicketDefaultText {
+.MarkpromptMessageSectionHeading {
   margin-block: 0;
   font-size: var(--markprompt-text-size-xs);
   color: var(--markprompt-mutedForeground);
@@ -2345,6 +2346,43 @@
   width: 100%;
   height: 100%;
 }
+.MarkpromptMessageCSATContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
+  padding-inline: 4rem;
+}
+
+.MarkpromptMessageCSATStar {
+  width: 20px;
+  height: 20px;
+  stroke-width: 1.5px;
+  cursor: pointer;
+}
+
+.MarkpromptMessageCSATStar[data-active="false"] {
+  color: var(--markprompt-mutedForeground);
+}
+
+.MarkpromptMessageCSATStar[data-active="true"] {
+  color: var(--markprompt-star-active);
+}
+
+.MarkpromptMessageCSATStar, .MarkpromptMessageCSATContainer .MarkpromptMessageSectionHeading {
+  --base-delay: 0.05s;
+  animation-delay: calc(var(--base-delay) * (var(--index) - 1));
+  animation-fill-mode: both;
+  animation-name: markprompt-slide-up-subtle;
+  animation-duration: 500ms;
+  transition-timing-function: ease-in;
+}
+
+.MarkpromptMessageCSATStar:nth-child(1) { --index: 1; }
+.MarkpromptMessageCSATStar:nth-child(2) { --index: 2; }
+.MarkpromptMessageCSATStar:nth-child(3) { --index: 3; }
+.MarkpromptMessageCSATStar:nth-child(4) { --index: 4; }
+.MarkpromptMessageCSATStar:nth-child(5) { --index: 5; }
 
 .MarkpromptCreateTicketView {
   display: grid;
