--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -27,16 +27,28 @@ body,
 }
 
 main {
+  position: relative;
   display: grid;
   place-items: center;
-  height: 100%;
-  min-height: 100vh;
-  min-height: 100dvh;
+  width: 100%;
+  height: 100vh;
 }
 
-.centered {
+#message {
+  position: absolute;
   display: grid;
   place-items: center;
+  inset: 0;
+}
+
+#message p {
+  border: 1px solid #ddd;
+  background-color: #fafafa;
+  padding: 0.25rem 0.75rem;
+  border-radius: 9999px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #222;
 }
 
 /* We make the container fill the entire screen to accommodate for
@@ -45,4 +57,5 @@ main {
 #markprompt {
   position: absolute;
   inset: 0;
+  pointer-events: auto;
 }
