Open ticket form from chat

--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2370,6 +2370,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
+  padding-top: 1rem;
   padding-inline: 4rem;
   animation-delay: 0.2s;
 }
@@ -2391,6 +2392,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.25rem;
+  padding-top: 0.5rem;
   padding-inline: 4rem;
 }
 
