--- a/examples/with-init/src/style.css
+++ b/examples/with-init/src/style.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgb(255 255 255 / 87%);
-  background-color: #242424;
+  background-color: #fff;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
